# turnip-engine

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  errors  scene.json  sync.cpp
newproject/: newproject.tur  (+1 more)
turnip-engine/: CMakeLists.txt
turnip-engine/src/: turnip_engine.hpp
turnip-engine/src/bridge/project/: project.cpp  project.hpp
turnip-engine/src/bridge/serialization/: asset.hpp  asset_library.hpp  components.hpp  config.hpp  core.hpp  scene.hpp
turnip-engine/src/bridge/views/: asset_binder_view.hpp  camera_view.hpp  cubemap_view.hpp  imm_quad_view.hpp  mesh_view.hpp  physics_script_view.hpp  physics_view.hpp  scene_signal_view.hpp  scenegraph_view.hpp  script_view.hpp  text_view.hpp  tilemap_view.hpp  turnip_renderer_view.hpp
turnip-engine/src/client/: asset_serialization.hpp  scene_serialization.hpp  scene_view.cpp  scene_view.hpp
turnip-engine/src/client/agents/: asset_binder_system.hpp  event_consumer.hpp  event_emitter.hpp  physics_script_agent.hpp  texture_asset_agent.hpp  texture_asset_binder_agent.hpp
turnip-engine/src/client/consumer/: texture_asset_binder_consumer.hpp
turnip-engine/src/client/project/: project.cpp  project.hpp
turnip-engine/src/client/system/: camera_system.hpp  cubemap_system.hpp  imm_quad_system.hpp  mesh_system.hpp  model_system.hpp  physics_system.hpp  scene_signal_system.hpp  scenegraph_subsystem.hpp  scenegraph_system.hpp  script_subsystem.hpp  script_system.hpp  system.hpp  texture_asset_binder_system.hpp  tilemap_system.hpp
turnip-engine/src/client/views/: asset_binder_view.hpp  camera_view.hpp  cubemap_view.hpp  font_view.hpp  imm_quad_view.hpp  mesh_view.hpp  physics_script_view.hpp  scene_signal_view.hpp  scenegraph_view.hpp  script_view.hpp  text_view.hpp  tilemap_view.hpp
turnip-engine/src/core/: common.hpp  defines.hpp  implementation.cpp  stb.cpp
turnip-engine/src/core/assert/: assert.hpp
turnip-engine/src/core/assets/: asset.hpp  asset_library.cpp  asset_library.hpp  audio_asset_handler.hpp  texture_asset.hpp  texture_asset_binder.cpp  texture_asset_binder.hpp
turnip-engine/src/core/assets/_old/: asset_librarycpp  asset_libraryhpp
turnip-engine/src/core/assets/audio/: audio_asset.hpp  audio_loader.hpp
turnip-engine/src/core/assets/cubemap/: cubemap_asset.hpp
turnip-engine/src/core/assets/font/: font_asset.hpp  font_loader.hpp
turnip-engine/src/core/assets/mesh/: mesh_asset.hpp  mesh_loader.cpp  mesh_loader.hpp
turnip-engine/src/core/assets/model/: model_asset.hpp  model_loader.cpp  model_loader.hpp
turnip-engine/src/core/assets/output/: asset_options
turnip-engine/src/core/assets/texture/: texture_asset.hpp  texture_library.hpp  texture_loader.hpp  texture_options.hpp
turnip-engine/src/core/audio/: audio.hpp  audio_components.hpp  audio_handler.cpp  audio_handler.hpp
turnip-engine/src/core/config/: application_config.hpp  config_data.cpp  config_data.hpp  engine_config.hpp  physics_config.hpp  scripting_data.hpp  vulkan_config.hpp  window_config.hpp  worker_config.hpp
turnip-engine/src/core/data-structures/: free_list.hpp  range.hpp  ring_buffer.hpp
turnip-engine/src/core/engine/: turnip_engine.cpp  turnip_engine.hpp
turnip-engine/src/core/event/: event.hpp  event_type.hpp  events.hpp  subscriber.hpp
turnip-engine/src/core/font/: font_handler.cpp  font_handler.hpp
turnip-engine/src/core/logging/: logging.hpp
turnip-engine/src/core/model/: model.hpp
turnip-engine/src/core/physics/: physics_components.hpp  physics_handler.cpp  physics_handler.hpp  physics_types.hpp
turnip-engine/src/core/scene/: common_components.hpp  components.hpp  entity.hpp  scene.cpp  scene.hpp  scene_holder.hpp
turnip-engine/src/core/script/: script.hpp  script_audio_injector.cpp  script_components.cpp  script_components.hpp  script_core_injector.cpp  script_handler.cpp  script_handler.hpp  script_input_injector.cpp  script_system.cpp  script_system.hpp
turnip-engine/src/core/time/: time.hpp
turnip-engine/src/core/view/: view.cpp  view.hpp
turnip-engine/src/core/windowing/: window.hpp  windowing.hpp
turnip-engine/src/core/worker/: worker_pool.cpp  worker_pool.hpp
turnip-engine/src/graphics/: asset_texture_mapper.hpp  camera.hpp  components.hpp  constants.hpp  graphics_binder.hpp  mesh_vertex.hpp  render_interface.hpp  tile.hpp
turnip-engine/src/graphics/objects/: buffer.hpp  command_buffer.hpp  descriptor.hpp  image.hpp  material.hpp  pipeline.hpp  queue.hpp  render_target.hpp  resource_handler.hpp  shader.hpp  shader_loader.hpp  sync.hpp  texture.hpp
turnip-engine/src/graphics/renderer/: cubemap_renderer.cpp  cubemap_renderer.hpp  font_renderer.cpp  font_renderer.hpp  imm_quad_renderer.cpp  imm_quad_renderer.hpp  imm_quad_system.hpp  mesh_renderer.cpp  mesh_renderer.hpp  model_renderer.cpp  model_renderer.hpp  renderer.hpp  text_renderer.cpp  text_renderer.hpp  tilemap_renderer.cpp  tilemap_renderer.hpp
turnip-engine/src/graphics/types/: access_flags.hpp  clear_color.hpp  extent.hpp  hardware_information.hpp  pipeline_stage.hpp  pipeline_type.hpp  queue_operations.hpp  viewport.hpp
turnip-engine/src/platform/: CMakeLists.txt  platform.hpp
turnip-engine/src/platform/glfw/: CMakeLists.txt  events_glfw.hpp  graphics_glfw.hpp  window_glfw.cpp  window_glfw.hpp  windowing_glfw.cpp  windowing_glfw.hpp
turnip-engine/src/rhi/: CMakeLists.txt  rhi.hpp
turnip-engine/src/rhi/noop/: noop_render_interface.hpp
turnip-engine/src/rhi/opengl/: CMakeLists.txt  gl_render_interface.cpp  gl_render_interface.hpp  opengl_common.hpp
turnip-engine/src/rhi/vulkan/: CMakeLists.txt  loader.cpp  vulkan_constants.hpp  vulkan_render_interface.cpp  vulkan_render_interface.hpp  vulkan_state.hpp
turnip-engine/src/utils/: aabb.hpp  color.hpp  extent.hpp  file.hpp  script_utils.hpp  string_utils.hpp  transform.hpp
turnip-engine/src/utils/cpu_info/: cpu_info.cpp  cpu_info.hpp
turnip-engine/src/utils/json/: json_common.cpp  json_common.hpp  json_file.hpp
turnip-engine/src/utils/random/: random.hpp
turnip-engine/src/utils/uuid/: uuid.hpp
(+181 files in other folders)
